# reddit-zst-to-parquet

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  config.example.toml  main.py  pyproject.toml  schemas  scripts  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml
.greptile/: config.json
commands/: bench.py  config_cmd.py  manifests.py  precheck.py  report.py  run.py  verify.py
core/: cli.py  config.py  converter.py  logger.py  master_schema_rc.json  master_schema_rs.json  parquet_footer.py  processor.py  schema_parser.py  utils.py
docs/: ARCHITECTURE.md  COLUMN_FREQUENCY.md  LESSONS_LEARNED.md  UNIFIED_SCHEMA.md
engines/: chunked_engine.py  pyarrow_engine.py  streamed_engine.py
tests/: test_cli_tooling.py  test_regressions.py  test_schema.py
transfer/: base_transfer.py  ftp_transfer.py  local_transfer.py  nfs_transfer.py  rsync_ssh_transfer.py
