[project]
name = "reddit-zst-to-parquet"
version = "0.1.0"
description = "Robust Reddit ZST to Parquet converter with schema enforcement and optimized sorting."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=15.0.0",
    "zstandard>=0.22.0",
    "orjson>=3.9.0",
    "humanize>=4.0.0",
    "duckdb>=0.10.0",
    "psutil>=7.2.2",
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "fsspec[ftp]>=2026.3.0",
]

[project.scripts]
reddit-zst-to-parquet = "core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "commands", "engines", "transfer"]
include = [
    "core/master_schema_rc.json",
    "core/master_schema_rs.json",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pyrefly>=0.62.0",
    "pyright>=1.1.409",
    "pytest>=8.0.0",
    "ruff>=0.15.12",
    "types-orjson>=3.6.2",
    "types-psutil>=7.2.2.20260408",
    "types-setuptools>=82.0.0.20260408",
]
[tool.pyrefly]
search-path = [".", "scripts"]
python-interpreter-path = ".venv/bin/python3"
disable-search-path-heuristics = true

[tool.pyright]
include = ["."]
venvPath = "."
venv = ".venv"
extraPaths = ["."]
typeCheckingMode = "basic"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [".venv", "deps"]
explicit_package_bases = true
mypy_path = "."

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "N999", "SIM105", "B027", "B023", "E402", "E722"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["core", "commands", "engines", "transfer", "scripts"]
